--- a/style.css
+++ b/style.css
@@ -29,6 +29,43 @@
     letter-spacing: 2px;
     color:rgb(255, 0, 132);
 }
+.nav-toggler {
+    width: 50px;
+    height: 50px;
+    border-radius: 30%;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+}
+
+.nav-toggler span {
+    width: 60%;
+    height: 4px;
+    background-color: rgb(255, 0, 132);
+    position: absolute;
+    transition: 0.3s;
+}
+
+.nav-toggler span::before,
+.nav-toggler span::after {
+    content: '';
+    width: 100%;
+    height: 4px;
+    background-color: rgb(255, 0, 132);
+    position: absolute;
+    transition: 0.3s;
+}
+
+.nav-toggler span::before {
+    transform: translateY(-10px);
+}
+
+.nav-toggler span::after {
+    transform: translateY(10px);
+}
+
 
 .navbar .nav-links {
     list-style: none;
@@ -115,7 +152,7 @@
 }
 
 .product-card img {
-    width: 500px;
+    width: auto;
     height: 500px;
     display: block;
 }
@@ -125,6 +162,7 @@
 }
 
 .product-info h3 {
+    text-align: center;
     color: red;
     margin-top: 0;
     font-size: 30px;
@@ -132,6 +170,7 @@
 }
 
 .product-info p {
+    text-align: center;
     font-size: 16px;
     line-height: 1.5;
     color:rgb(255, 0, 132);
@@ -189,7 +228,9 @@
     .container {
         width: 90%;
     }
-
+    .navbar .nav-toggler{
+        display: none;
+    }
     .navbar .nav-links {
         gap: 15px;
     }
@@ -205,26 +246,36 @@
     }
 
     .product-card img {
-        width: 400px;
+        width: 100%;
         height: 400px;
     }
 }
 
+
 /* For small screens (mobile phones) */
 @media (max-width: 767px) {
     .navbar .container {
-        flex-direction: column;
+    
         align-items: flex-start;
     }
 
     .navbar .nav-links {
         display: none; /* Hide navigation links for mobile */
     }
-
+    .nav-links.showlinks{
+        display: flex;
+        flex-direction: column;
+        margin: 20% 50% 0 0;
+    }
+    .navbar .nav-toggler{
+        display: flex;
+        left:80%;
+        margin-right: 10px;
+        size: 10%;
+    }
     .navbar .logo {
         font-size: 18px;
     }
-
     .box {
         flex-direction: column;
         align-items: center;
@@ -254,7 +305,9 @@
         width: 100%;
         height: auto;
     }
-
+    .about {
+        width: 100%;
+    }
     .about, .contact {
         padding: 50px 20px;
     }
@@ -268,6 +321,13 @@
 @media (max-width: 480px) {
     .navbar {
         padding: 10px 0;
+    }
+    .navbar .nav-toggler{
+        position: absolute;
+    }
+    .navbar .logo{
+        padding: 0;
+        letter-spacing: 0;
     }
 
     .product-info h3 {
